# newbabylon-asp

./: .gitignore  DEMO.md  Dockerfile  README.md
aetheris-semantic-protocol/: .gitignore  .gitmodules  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SUPPORTERS.md  babylon_generated.rs  extract_tokens.py  phrases_100.json  translations_output.json
aetheris-semantic-protocol/.github/: FUNDING.yml
aetheris-semantic-protocol/aetheris-lib/: Cargo.toml
aetheris-semantic-protocol/aetheris-lib/src/: lib.rs  models.rs  texture.rs
aetheris-semantic-protocol/aetheris-lib/src/ai/: mod.rs
aetheris-semantic-protocol/aetheris-lib/src/proto/: babylon.fbs  babylon_generated.rs  mod.rs
aetheris-semantic-protocol/aetheris-lib/src/transport/: mod.rs
aetheris-semantic-protocol/babylon-cli/: Cargo.toml
aetheris-semantic-protocol/babylon-cli/src/: main.rs
aetheris-semantic-protocol/docs/: 10_PHRASE_BENCHMARK_REPORT.md  INT8_KTX2_BENCHMARK.md
aetheris-semantic-protocol/models/decoders/marian-en-ar/: config.json  model.safetensors  vocab.json
aetheris-semantic-protocol/models/decoders/marian-en-de/: model.safetensors
aetheris-semantic-protocol/models/decoders/marian-en-es/: config.json  model.safetensors  vocab.json
aetheris-semantic-protocol/models/decoders/marian-en-fr/: config.json  model.safetensors
aetheris-semantic-protocol/models/decoders/marian-en-ru/: model.safetensors
aetheris-semantic-protocol/models/decoders/marian-en-zh/: model.safetensors
aetheris-semantic-protocol/models/encoders/marian-ar-en/: model.safetensors
aetheris-semantic-protocol/models/encoders/marian-de-en/: config.json  model.safetensors
aetheris-semantic-protocol/models/encoders/marian-es-en/: config.json  model.safetensors
aetheris-semantic-protocol/models/encoders/marian-fr-en/: config.json  model.safetensors
benchmarks/: translate_benchmark.py
(+10 files in other folders)
