[package]
name = "aetheris-lib"
version = "0.1.0"
edition = "2021"

[lib]
name = "aetheris_lib"
path = "src/lib.rs"

[dependencies]
# Системный обвес и zero-allocation memory-mapping
memmap2 = "0.9"
bytemuck = "1.14"
anyhow = "1.0"
libc = "0.2.183"
half = "2.7.1"
rayon = "1.11.0"

# ИИ-движок Candle & Tokenizers (MarianMT / Embedding pipeline)
candle-core = "0.8"
candle-transformers = "0.8"
candle-nn = "0.8"
tokenizers = "0.21.0"
gguf-rs = "0.1.7"

# Криптография и безопасность (DESS Space Shuffling)
zeroize = { version = "1.7", features = ["derive"] }
rand = "0.8"
rand_chacha = "0.3"
fxhash = "0.2.1"

# Сеть, Данные и Сериализация
quiche = { version = "0.20", features = ["boringssl-vendored"] }
flatbuffers = "24.3.25"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
blake3 = "1.5"
zstd = "0.13"

